src/main/resources/static/style.css
body {
    font-family: 'Roboto', sans-serif;
}

.navbar {
    height: 80px;
}

.container{
    max-width: 100%!important;
    position: relative;
    border: 1px solid black;
}

.row-btn{
    margin: 0;
    position: absolute;
    top: 60%;
    left: 50%;
    -ms-transform: translate(-50%, -50%)!important;
    transform: translate(-50%, -50%)!important;
}

.background {
    background-image: url("images/netzwerke.jpg")!important;
    background-size: cover;
    height: 700px!important;
}

.login-box {
    margin-top: 75px;
    height: auto;
    background: #ffffff;
    text-align: center;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
    border-radius: 8px;
}

.text-center{
    padding: 10px;
}

@media (min-width: 720px) {
    .row-headline{
        width: 300px;
    }
}

@media (min-width: 900px) {
    .row-headline{
        width: 800px;
    }
}


.mainHeadline{
    color: #ffffff;
    text-align: center;
}

.login-key {
    height: 100px;
    font-size: 80px;
    line-height: 100px;
    background: -webkit-linear-gradient(#e3e3e3, #b9b9b9);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    margin-top: 25px;
}

.login-title {
    margin-top: 15px;
    text-align: center;
    font-size: 30px;
    letter-spacing: 2px;
    margin-top: 15px;
    font-weight: bold;
    color: #000000;
}

.login-form {
    margin-top: 25px;
    text-align: left;
}

input[type=text] {
    background-color: #ffffff;
    border: none;
    border-bottom: 2px solid rgba(13, 184, 222, 0.5);
    border-top: 0px;
    border-radius: 0px;
    font-weight: bold;
    outline: 0;
    margin-bottom: 20px;
    padding-left: 0px;
    color: #000000;
}

input[type=password] {
    background-color: #ffffff;
    border: none;
    border-bottom: 2px solid rgba(13, 184, 222, 0.5);
    border-top: 0px;
    border-radius: 0px;
    font-weight: bold;
    outline: 0;
    padding-left: 0px;
    margin-bottom: 20px;
    color: #000000;
}

.form-group {
    margin-bottom: 40px;
    outline: 0px;
}

.form-control:focus {
    border-color: inherit;
    -webkit-box-shadow: none;
    box-shadow: none;
    border-bottom: 2px solid #0DB8DE;
    outline: 0;
    background-color: #1A2226;
    color: #686869;
}

input:focus {
    outline: none;
    box-shadow: 0 0 0;
}

label {
    margin-bottom: 0px;
}

.form-control-label {
    font-size: 13.5px;
    color: #686869FF;
    font-weight: bold;
    letter-spacing: 1px;
}

.btn-outline-primary {
    border-color: #0DB8DE;
    color: #0DB8DE;
    border-radius: 0px;
    font-weight: bold;
    letter-spacing: 1px;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    margin-top: 20px;
}

.btn-outline-primary:hover {
    background-color: #0DB8DE;
    right: 0px;
}

.login-btm {
    float: left !important;
}

.login-button {
    padding-right: 0px;
    text-align: right;
    margin-bottom: 25px;
}

.login-text {
    text-align: left;
    padding-left: 0px;
    color: #A2A4A4;
}

.loginbttm {
    padding-left: 0px;
    margin-left: 30px;
}

.form-select {
    display: block;
    width: 100%;
    padding: .375rem 2.25rem .375rem .75rem;
    -moz-padding-start: calc(0.75rem - 3px);
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: #212529;
    background-color: #fff;
}

